@@ -70,6 +70,7 @@ export(summarise_motifs)
 export(switch_alph)
 export(trim_motifs)
 export(ungap)
+export(view_logo)
 export(view_motifs)
 export(write_homer)
 export(write_jaspar)
@@ -146,6 +147,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,theme_void)
 importFrom(ggplot2,waiver)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
