@@ -1,24 +1,3 @@
-# TODO: think about plugging view_motifs() into ggtree somehow
-
-# TODO: view_logo()
-
-# TODO: need to implement arg checks for new options
-
-# TODO: For the Roboto Medium font, the I's get stretched out to x0=0, x1=1,
-# which reults in some ugly looking I's...
-# At the very least, show an example where the I's are manually shrunk:
-#
-# library(universalmotif)
-# data(fontDFroboto)
-# fontdf <- as.data.frame(fontDFroboto)
-# tofix <- fontdf$x[fontdf$group == "I"]
-# tofix <- tofix * 0.35 + 0.5 - 0.35 / 2
-# fontdf$x[fontdf$group == "I"] <- tofix
-# view_motifs2(create_motif(alphabet = "AA"), fontDF = fontdf)
-
-# Or scale the letters one at a time in the make_letter function from 0 to 1
-# (y, not x).
-
 #' Plot motif logos.
 #'
 #' Show sequence logo. If given a list of more than one motif, then the motifs
@@ -46,11 +25,16 @@
 #' @param fontDF `data.frame` or `DataFrame` Polygon data for letters used
 #'    for plotting, as generated by the `createPolygons()` function from the
 #'    `gglogo` package. See the `fontDFroboto` data object (which is used
-#'    by default when `fontDF = NULL`).
+#'    by default when `fontDF = NULL`). See `Examples` for how to generate
+#'    your own font set. Expected columns: `x`, `y`, `order`, `group`.
 #' @param min.height `numeric(1)` Minimum height for a letter to be plotted.
 #'    The number is taken as the fraction of the total height of the plot.
+#'    The default value is to not show letters which take up 1% or less of the
+#'    vertical space. For smaller figures it is recommended to increase this
+#'    value, and vice versa for larger figures.
 #' @param x.spacer `numeric(1)` Add horizontal spacing between letters. The
 #'    number is taken as the fraction of the width of an individual position.
+#'    Increasing this value is recommended for plotting multifreq motifs.
 #' @param y.spacer `numeric(1)` Add vertical spacing between letters. The
 #'    number is taken as the fraction nof the total height of the plot.
 #' @param sort.positions `logical(1)` Sort letters vertically per position
@@ -63,26 +47,53 @@
 #'    parameter is ignore if `use.type %in% c("PWM", "ICM")`.
 #' @param ... Currently unused.
 #'
-#' @return A ggplot object. If `return.raw = TRUE`, a list of matrices.
+#' @return A `ggplot` object. If `return.raw = TRUE`, a list of matrices.
 #'
 #' @details
 #' See [compare_motifs()] for more info on comparison parameters.
+#'
+#' See [view_logo()] to plot from a numeric matrix instead of a `universalmotif`
+#' object.
 #'
 #' Note: `score.strat = "a.mean"` is NOT recommended, as [view_motifs()] will
 #' not discriminate between two alignments with equal mean scores, even if one
 #' alignment is longer than the other.
 #'
+#' Note: if you want to plot the motifs yourself, you can set
+#' `return.raw=TRUE` to get the numeric motif matrices and calculate
+#' the polygon paths on your own or access the polygon path data directly from
+#' the final `ggplot` object using `$data`.
+#'
 #' @examples
-#' ## plotting multifreq motifs:
+#' ## Plotting multifreq motifs:
 #' data(examplemotif2)
 #' view_motifs(examplemotif2, use.freq = 2)
 #'
-#' @references
-#' \insertRef{logolas}{universalmotif}
+#' ## Generate your own letter set:
+#' \dontrun{
 #'
-#' \insertRef{ggseqlogo}{universalmotif}
+#' library(gglogo)
+#' fontDFtimes <- createPolygons(LETTERS, "Times", 800, scale = TRUE)
+#' view_motifs(examplemotif2, fontDF = fontDFtimes)
 #'
-#' @seealso [compare_motifs()], [add_multifreq()]
+#' ## Note: setting `scale = TRUE` is necessary to properly align letters
+#' ## vertically, but this has the effect of horizontally stretching out
+#' ## letters which shouldn't be stretched (such as "I"). If you need to plot
+#' ## letters which have been badly horizontally scaled, you can fix them
+#' ## manually as demonstrated here:
+#'
+#' tofix <- fontDFtimes$x[fontDFtimes$group == "I"]
+#' # First scale the letter x-coordinates:
+#' tofix <- tofix * 0.35
+#' # Center the letter around 0.5:
+#' tofix <- tofix + (1 - max(tofix)) / 2
+#' # Apply the fix:
+#' fontDFtimes$x[fontDFtimes$group == "I"] <- tofix
+#' view_motifs(create_motif("AIG", alphabet = "AA"), fontDF = fontDFtimes)
+#'
+#' }
+#'
+#' @seealso [compare_motifs()], [add_multifreq()], [view_logo()]
 #' @author Benjamin Jean-Marie Tremblay, \email{b2tremblay@@uwaterloo.ca}
 #' @inheritParams compare_motifs
 #' @export
@@ -91,10 +102,15 @@ view_motifs <- function(motifs, use.type = "ICM", method = "ALLR",
   normalise.scores = FALSE, min.position.ic = 0, score.strat = "sum",
   return.raw = FALSE, dedup.names = FALSE, show.positions = TRUE,
   show.positions.once = TRUE, show.names = TRUE, use.freq = 1,
-  colour.scheme = NULL, fontDF = NULL, min.height = 0.03, x.spacer = 0.04,
+  colour.scheme = NULL, fontDF = NULL, min.height = 0.01,
+  x.spacer = if (use.freq == 1) 0.04 else 0.1,
   y.spacer = 0.01, sort.positions = !use.type %in% c("PCM", "PPM"),
   sort.positions.decreasing = TRUE, text.size = 16,
   fit.to.height = if (use.type == "PPM") 1 else NULL, ...) {
+
+  # TODO: think about plugging view_motifs() into ggtree somehow
+
+  # TODO: need to implement arg checks for new options
 
   # param check --------------------------------------------
   args <- as.list(environment())
@@ -461,12 +477,16 @@ make_matrix_polygon_data <- function(mat, fontDF, min.height = 0.03,
   sort.positions.decreasing = TRUE, fit.to.height = NULL,
   fit.to.width = 1) {
 
+  if (!any(c("x", "y", "order", "group") %in% colnames(fontDF)))
+    stop(wmsg("Expected columns [x, y, order, group] in `fontDF` object"))
+
   out <- vector("list", ncol(mat))
 
   for (i in seq_along(out)) {
     out[[i]] <- make_position_polygon_data(mat[, i, drop = TRUE], fontDF,
       min.height, x.spacer, y.spacer, sort.positions,
-      sort.positions.decreasing, fit.to.height, fit.to.width, i)
+      sort.positions.decreasing, fit.to.height, fit.to.width, i)[, -5]
+    out[[i]][, c("x", "y", "order", "group", "letter.id")]
     if (nrow(out[[i]])) {
       out[[i]]$x <- out[[i]]$x + i - 1
     }
@@ -507,15 +527,17 @@ make_position_polygon_data <- function(vec, fontDF, min.height = 0.03,
 
   if (sort.positions) vec <- sort(vec, decreasing = sort.positions.decreasing)
 
-  # TODO: The current y.spacer implementation is technically introducing some
-  # incorrectness, since middle letters get squished more than outer letters
-  # and they then lose their real proportions. Shouldn't be too noticeable
-  # when y.spacer is small, but worth going back and fixing later. Of course,
-  # a quick fix would be to squish the outer letters just as much as the inner
-  # ones but I don't think that looks as nice.
+  # Some low prio stuff that could be fixed eventually:
 
-  # TODO: Make it so the y.spacer is implemented between the bottom letter of
-  # +0 and the top letter of -0, possible via setting the trim.top/bot flags.
+    # The current y.spacer implementation is technically introducing some
+    # incorrectness, since middle letters get squished more than outer letters
+    # and they then lose their real proportions. Shouldn't be too noticeable
+    # when y.spacer is small, but worth going back and fixing later. Of course,
+    # a quick fix would be to squish the outer letters just as much as the inner
+    # ones but I don't think that looks as nice.
+
+    # Make it so the y.spacer is implemented between the bottom letter of
+    # +0 and the top letter of -0, possible via setting the trim.top/bot flags.
 
   y.spacer2 <- 0
   if (length(vec) > 1)
