@@ -9,10 +9,11 @@ view_motifs(motifs, use.type = "ICM", method = "ALLR", tryRC = TRUE,
   normalise.scores = FALSE, min.position.ic = 0, score.strat = "sum",
   return.raw = FALSE, dedup.names = FALSE, show.positions = TRUE,
   show.positions.once = TRUE, show.names = TRUE, use.freq = 1,
-  colour.scheme = NULL, fontDF = NULL, min.height = 0.03,
-  x.spacer = 0.04, y.spacer = 0.01, sort.positions = !use.type \%in\%
-  c("PCM", "PPM"), sort.positions.decreasing = TRUE, text.size = 16,
-  fit.to.height = if (use.type == "PPM") 1 else NULL, ...)
+  colour.scheme = NULL, fontDF = NULL, min.height = 0.01, x.spacer = if
+  (use.freq == 1) 0.04 else 0.1, y.spacer = 0.01,
+  sort.positions = !use.type \%in\% c("PCM", "PPM"),
+  sort.positions.decreasing = TRUE, text.size = 16, fit.to.height = if
+  (use.type == "PPM") 1 else NULL, ...)
 }
 \arguments{
 \item{motifs}{See \code{\link[=convert_motifs]{convert_motifs()}} for acceptable motif formats.}
@@ -83,13 +84,18 @@ Default colours are provided for DNA, RNA, and AA motifs if left \code{NULL}.}
 \item{fontDF}{\code{data.frame} or \code{DataFrame} Polygon data for letters used
 for plotting, as generated by the \code{createPolygons()} function from the
 \code{gglogo} package. See the \code{fontDFroboto} data object (which is used
-by default when \code{fontDF = NULL}).}
+by default when \code{fontDF = NULL}). See \code{Examples} for how to generate
+your own font set. Expected columns: \code{x}, \code{y}, \code{order}, \code{group}.}
 
 \item{min.height}{\code{numeric(1)} Minimum height for a letter to be plotted.
-The number is taken as the fraction of the total height of the plot.}
+The number is taken as the fraction of the total height of the plot.
+The default value is to not show letters which take up 1\% or less of the
+vertical space. For smaller figures it is recommended to increase this
+value, and vice versa for larger figures.}
 
 \item{x.spacer}{\code{numeric(1)} Add horizontal spacing between letters. The
-number is taken as the fraction of the width of an individual position.}
+number is taken as the fraction of the width of an individual position.
+Increasing this value is recommended for plotting multifreq motifs.}
 
 \item{y.spacer}{\code{numeric(1)} Add vertical spacing between letters. The
 number is taken as the fraction nof the total height of the plot.}
@@ -109,7 +115,7 @@ parameter is ignore if \code{use.type \%in\% c("PWM", "ICM")}.}
 \item{...}{Currently unused.}
 }
 \value{
-A ggplot object. If \code{return.raw = TRUE}, a list of matrices.
+A \code{ggplot} object. If \code{return.raw = TRUE}, a list of matrices.
 }
 \description{
 Show sequence logo. If given a list of more than one motif, then the motifs
@@ -118,23 +124,50 @@ are aligned with the first in the list.
 \details{
 See \code{\link[=compare_motifs]{compare_motifs()}} for more info on comparison parameters.
 
+See \code{\link[=view_logo]{view_logo()}} to plot from a numeric matrix instead of a \code{universalmotif}
+object.
+
 Note: \code{score.strat = "a.mean"} is NOT recommended, as \code{\link[=view_motifs]{view_motifs()}} will
 not discriminate between two alignments with equal mean scores, even if one
 alignment is longer than the other.
+
+Note: if you want to plot the motifs yourself, you can set
+\code{return.raw=TRUE} to get the numeric motif matrices and calculate
+the polygon paths on your own or access the polygon path data directly from
+the final \code{ggplot} object using \verb{$data}.
 }
 \examples{
-## plotting multifreq motifs:
+## Plotting multifreq motifs:
 data(examplemotif2)
 view_motifs(examplemotif2, use.freq = 2)
 
-}
-\references{
-\insertRef{logolas}{universalmotif}
+## Generate your own letter set:
+\dontrun{
 
-\insertRef{ggseqlogo}{universalmotif}
+library(gglogo)
+fontDFtimes <- createPolygons(LETTERS, "Times", 800, scale = TRUE)
+view_motifs(examplemotif2, fontDF = fontDFtimes)
+
+## Note: setting `scale = TRUE` is necessary to properly align letters
+## vertically, but this has the effect of horizontally stretching out
+## letters which shouldn't be stretched (such as "I"). If you need to plot
+## letters which have been badly horizontally scaled, you can fix them
+## manually as demonstrated here:
+
+tofix <- fontDFtimes$x[fontDFtimes$group == "I"]
+# First scale the letter x-coordinates:
+tofix <- tofix * 0.35
+# Center the letter around 0.5:
+tofix <- tofix + (1 - max(tofix)) / 2
+# Apply the fix:
+fontDFtimes$x[fontDFtimes$group == "I"] <- tofix
+view_motifs(create_motif("AIG", alphabet = "AA"), fontDF = fontDFtimes)
+
+}
+
 }
 \seealso{
-\code{\link[=compare_motifs]{compare_motifs()}}, \code{\link[=add_multifreq]{add_multifreq()}}
+\code{\link[=compare_motifs]{compare_motifs()}}, \code{\link[=add_multifreq]{add_multifreq()}}, \code{\link[=view_logo]{view_logo()}}
 }
 \author{
 Benjamin Jean-Marie Tremblay, \email{b2tremblay@uwaterloo.ca}
