@@ -12,6 +12,9 @@ NEW FEATURES
       This change should also allow for easier fixing of bugs and flexibility
       for future additions or changes.
 
+    o view_logo(): plot logos with matrix input instead of universalmotif-class
+      object input.
+
     o trim_motifs(..., trim.from): trim from both directions or just one.
 
     o shuffle_sequences(..., window, window.size, window.overlap): shuffle
